# my-basis

./: .gitignore  .gitlab-ci.yml  .mdformat.toml  .plumber.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .repo.yaml  .taplo.toml  .yamlfmt.yaml  AGENTS.md  CHANGELOG.md  Containerfile  README.md  RELEASE-1.0-HANDOFF.md  RELEASE-READINESS-EVIDENCE.md  RELEASE-READINESS.md  Taskfile.dist.yaml  Taskfile.yaml  codestyle.yaml  example.rgx  main.py  packages.typ  prek.toml  pyproject.toml  report.typ  theme.typ
archive/: python-publishing.gitlab-ci.yaml  python.gitlab-ci.yaml
data/: importas.yaml
data/snapshots/: test_RegexStore.ambr
data/templates/: Article.md.jinja  Markdown.md.jinja  MyEnum.py.jinja  document.md.jinja  module.md.jinja
docs/: DESIGN-cast-flags.md  Makefile  README.md  apis.Environment.md  apis.Filesystem.md  apis.GoogleSheet.md  apis.md  caches.Cache.md  caches.FileCache.md  caches.NestedCache.md  caches.PickleCache.md  caches.md  conf.py  files.Markdown.md  files.md  gen_module_docs.py  index.md  index.my  index.rst  modules.rst  mrab-regex-syntax.my  regex.MatchData.md  regex.RegexDebugger.md  regex.RegexStore.md  regex.common.md  regex.extended_syntax.md  regex.md  regex.meta.Atom.md  regex.meta.GroupAtom.md  regex.meta.GroupKind.md  regex.meta.ParseData.md  regex.meta.Quantifier.md  regex.meta.Regex.md  regex.meta.SetAtom.md  regex.meta.Tree.md  regex.meta.md  regex.meta.meta_rgxs.md  requirements.txt  types.Buffer.md  types.Command.md  (+21 more)
docs/_source/: extended_regex_syntax.md  index.md  modules.md  my.apis.Environment.md  my.apis.GoogleSheet.md  my.apis.md  my.caches.Cache.md  my.caches.FileCache.md  my.caches.NestedCache.md  my.caches.PickleCache.md  my.caches.md  my.files.Markdown.md  my.files.md  my.md  my.regex.MatchData.md  my.regex.ParseData.md  my.regex.RegexDebugger.md  my.regex.RegexStore.md  my.regex.common.md  my.regex.md  my.regex.meta.Atom.md  my.regex.meta.GroupAtom.md  my.regex.meta.GroupKind.md  my.regex.meta.ParseData.md  my.regex.meta.Quantifier.md  my.regex.meta.Regex.md  my.regex.meta.SetAtom.md  my.regex.meta.Tree.md  my.regex.meta.md  my.types.Buffer.md  my.types.Command.md  my.types.MyEnum.md  my.types.Predicate.md  my.types.Span.md  my.types.UniqueId.md  my.types.md  my.typing.AutocastModel.md  my.typing.MyType.md  my.typing.Typist.md  my.typing.md  (+6 more)
my/: README.md  __init__.py  contributing.md  infra.py
my/_adoption/: __init__.py  models.py  proposal.py  scanner.py
my/apis/: Environment.py  Filesystem.py  GoogleSheet.py  README.md  __init__.py
my/base/: MyEnum.py  constants.py  google_utils.py  utils.py
my/caches/: Cache.py  FileCache.py  NestedCache.py  PickleCache.py  README.md  __init__.py
my/cli/: write_enum.py
my/code/: Block.py  Element.py  File.py  Lang.py
my/data/: EnumType.py  __init__.py  platform-conventions.yaml
my/files/: Markdown.py  README.md  __init__.py
my/infra/: __init__.py  constants.py  gsheet_type-script.js  types.py
my/perf/: FileCache.py  NestedCache.py  PickleCache.py  __init__.py
my/regex/: GroupKind.py  MatchData.py  ParseData.py  README.md  RegexDebugger.py  RegexStore.py  __init__.py  common.py  common_regexes.py  common_rgxs.py  regex_debug.py
my/scripts/: adopt_basis.py  regex_storefront.py  render_type_matrix.py  sync_docs.py
my/sql/: EnumType.py
my/templates/: Markdown.md.jinja  README.md  document.md.jinja
my/text/: Buffer.py  GroupKind.py  Markdown.py  MatchData.py  ParseData.py  RegexStore.py  Span.py  __init__.py  common_rgxs.py  debug_regex.py
my/type/: Environment.py  Predicate.py  Typist.py  __init__.py
my/types/: Buffer.py  Command.py  Idx.py  IdxSpec.py  MyEnum.py  MyEnumRow.py  Platform.py  Predicate.py  README.md  Span.py  UniqueId.py  __init__.py
my/typing/: AutocastModel.py  Cast.py  Metatype.py  MyType.py  README.md  SpecialForm.py  Typist.py  _TypingBase.py  __init__.py  _common.py  cast.py  check.py  match.py  scratch.py  type_matrix.py  typecast.py  typecheck.py  typematch.py
my/utils/: CodeUtils.py  IterUtils.py  MetricUtils.py  README.md  SemanticUtils.py  SyntaxUtils.py  SystemUtils.py  TextUtils.py  _UtilsBase.py  __init__.py
scripts/: audit_tests.py  check_release_artifacts.py
src/: __init__.py  aliases.py  constants.py
src/base/: MyEnum.py  UniqueId.py  constants.py  utils.py
src/bases/: Architectonic.py  Cache.py  Idx.py  UniqueId.py  __init__.py
src/code/: ArchImports.py  Block.py  Element.py  File.py  Imports.py  Lang.py  __init__.py
src/perf/: NestedCache.py  PickleCache.py
src/text/: Buffer.py  MatchData.py  RegexStore.py  Span.py
src/type/: Predicate.py  Typist.py  __init__.py
test/: conftest.py
test/apis/: test_Environment.py  test_GoogleSheet.py
test/base/: test_MyEnum.py  test_UniqueId.py  test_utils.py
test/caches/: test_FileCache.py  test_NestedCache.py  test_PickleCache.py
test/code/: test_Block.py
test/regex/: common_rgx_tests.yaml  test_Atom.py  test_Atoms.py  test_Block.py  test_Expression.py  test_GroupAtom.py  test_GroupKind.py  test_MatchData.py  test_Quantifier.py  test_Regex.py  test_RegexDebugger.py  test_RegexStore.py  test_SetAtom.py  test_Tree.py  test_common.py  test_common.yaml  test_common_rgxs.py
test/text/: test_Buffer.py  test_MatchData.py  test_RegexStore.py  test_Span.py
test/type/: test_Predicate.py  test_Typist.py
test/types/: test_Buffer.py  test_Command.py  test_Predicate.py  test_Span.py  test_UniqueId.py
test/typing/: test_MyType.py  test_Typist.py
test/utils/: test_CodeUtils.py  test_IterUtils.py  test_MetricUtils.py  test_SemanticUtils.py  test_SyntaxUtils.py  test_SystemUtils.py  test_TextUtils.py
tests/: README.md  conftest.py  report-sample.typ  test_examples.py  test_lazy_facade.py
tests/adoption/: __init__.py  test_cli.py  test_proposal.py  test_scanner.py
tests/apis/: test_Environment.py  test_Filesystem.py  test_GoogleSheet.py
tests/caches/: test_Cache.py  test_FileCache.py  test_NestedCache.py  (+1 more)
typst/: .gitignore  LICENSE  README.md  callouts.typ  install.sh  lib.typ  packages.typ  problem-space.typ  test.sh  theme.typ  typst.toml
(+76 files in other folders)
