###################
### I. METADATA ###
###################
[project]
name = "my-basis"
version = "0.2.0"
description = "An extensive utility library for python, focusing especially on iterables and a Regex 'Store'."
readme = "README.md"
authors = [{ name = "Robb Doering", email = "robb@doering.ai" }]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: General",
  "Topic :: Utilities",
  "Typing :: Typed",
]

urls = { Homepage = "https://gitlab.com/doering-ai/libs/basis" }


########################
### II. DEPENDENCIES ###
########################
dependencies = [
  "dotenv>=0.9.9",
  "identify>=2.6.19",
  "jinja2>=3.1.6",
  "mdformat>=0.7.22",
  "more-itertools>=10.7.0",
  "numpy>=2.4.1",
  "pydantic>=2.11.7",
  "python-dateutil>=2.9.0.post0",
  "regex>=2024.4.28",
  "srsly>=2.5.1",
  "tomli-w>=1.2.0",
  "toolz>=1.1.0",
  "tqdm>=4.67.1",
  "unidecode>=1.4.0",
]

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.12.15"]
myst = ["mdformat-front-matters>=2.0.0", "mdformat-myst>=0.3.0"]
metrics = [
  "opentelemetry-instrumentation-aiohttp-client>=0.57b0",
  "opentelemetry-instrumentation-asgi>=0.57b0",
  "logfire[system-metrics]>=4.3.5",
  "pandas>=2.3.2",
]
google = [
  "google-api-python-client>=2.179.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "pandas>=2.3.2",
]
terminal = ["pyratatui>=0.2.9"]

[dependency-groups]
dev = [
  { include-group = "cli" },
  { include-group = "eval" },
  { include-group = "test" },
  { include-group = "docs" },
]

# Sub-groups for development dependencies
cli = ["bpython>=0.26", "better-exceptions>=0.3.3", "prek>=0.3.13"]
# Evaluation dependencies for type checking, linting, and code analysis
eval = [
  "ruff>=0.14.10",
  "types-python-dateutil>=2.9.0.20250822",
  "types-regex>=2025.7.34.20250809",
  "types-tqdm>=4.67.0.20250809",
  "pandas-stubs>=2.3.0.250703",
  "pyrefly>=0.62.0",
]
# Testing dependencies for unit tests, coverage, and test utilities
test = [
  "coverage>=7.10.5",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "pytest-timeout>=2.4.0",
  "pytest>=8.4.1",
  "syrupy>=5.1.0",
]
# Documentation dependencies for building and hosting project documentation
docs = [
  "furo>=2025.12.19",                  # HTML Theme
  "linkify-it-py>=2.0.3",              # Nested sphinx dependency
  "myst-parser>=4.0.1",                # Support myst syntax
  "sphinx>=8.2.3",                     # Documentation generator
  "sphinx-hoverxref>=1.4.2",           # Cross-referencing tool
  "sphinx-last-updated-by-git>=0.3.8", # Git integration for last updated info
  "sphinx-notfound-page>=1.1.0",       # Custom 404 page for missing docs
]

# [tool.uv]
# This 10-day buffer is a critical cybersafety measure; do not remove without an alternative!
# exclude-newer = "10 days"

# [tool.uv.exclude-newer-package]
# Put any dependencies that you're working on/with in this list to exempt them from the buffer

#########################
### III. BUILD SYSTEM ###
#########################
[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = ["my", "data"]
module-root = ""
namespace = true

[project.scripts]
regex-storefront = "my.scripts.regex_storefront:main"
sync-docs = "my.scripts.sync_docs:main"

#############################
### IV. DEVELOPMENT TOOLS ###
#############################
# -------
# Testing
# -------
[tool.pytest.ini_options]
testpaths = ["tests"]
# No unit test in this library should legitimately run anywhere near this long; a test
# exceeding it means an infinite loop/recursion, not slow I/O -- fail fast instead of hanging.
timeout = 15

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  'def __repr__',
  'if[- \w.]+\b(?i:debug):',
  'assert ',
  'raise (Assertion|NotImplemented)Error',
  'if 0:',
  'if __name__ == .__main__.:',
  '@(abc\.)?abstractmethod',
  '^([a-z]\w+?\.)?[A-Z][_A-Z]+(:[^=\n]+)? *=[^\n]+(?=\n\S)',
]
ignore_errors = true

# ------
# Typing
# ------
[tool.pyrefly]
project-includes = ["my/**/*.py*", "tests/**/*.py*"]
# Idx/IdxSpec are an unintegrated, half-finished subpackage: not exported from
# `my/types/__init__.py`, and they import a pre-rename package name (`myBasis`) and a
# `.enums` module that doesn't exist. Their fate (finish or delete) is basis-08's call, not
# this task's -- exclude them rather than gate on dead imports.
project-excludes = [
  "my/types/Idx.py",
  "my/types/IdxSpec.py",
]
min-severity = 'warn'
python-version = '3.13'
check-unannotated-defs = true
permissive-ignores = true
search-path = ['.']

[tool.pyrefly.errors]
missing-source = false
implicit-any = false
unannotated-parameter = false
no-access = 'error'
unused-ignore = 'error'
unannotated-attribute = 'error'

# First pyrefly baseline (2026-07-02): each relaxation below is a *real* remaining finding
# category, downgraded to 'warn' (still printed, doesn't fail the gate) rather than silenced,
# so counts are visible for a later task to ratchet back to 'error' as each is paid down.
# Root causes, grouped:
# - bad-argument-type, no-matching-overload, bad-assignment: the runtime coercion/dispatch
#   engine (Typist, Transform, IterUtils, Command) intentionally takes broad unions and
#   narrows at runtime; plus 3rd-party stub mismatches (srsly/tomllib/pickle/regex expect
#   narrower types than our IO|Path|bytes union args, and `regex`'s stub types
#   `DEFAULT_VERSION` as a `Literal` constant even though runtime treats it as assignable).
# - missing-attribute: dynamically-typed 3rd-party surfaces (googleapiclient's `Resource`
#   built at runtime, pyratatui's still-incomplete stubs, `importlib.resources.abc.Traversable`
#   missing `exists()` in typeshed) plus Flag/Enum multi-class dispatch in MyEnum; also
#   `tests/types/test_Predicate.py`'s `pred.serialize(...)` xfail spec (basis-06), restored on
#   purpose for a method that doesn't exist yet -- self-clears once `Predicate.serialize` lands.
# - bad-return, invalid-argument, not-iterable: `Self`-typed classmethods colliding with
#   `Flag`'s multiple inheritance in MyEnum, and `type(self)` iteration over Flag members (a
#   real stdlib idiom that isn't statically typed as iterable).
# - invalid-yield, bad-specialization: deep TypeVar-bound tracking in MyType (generator
#   overload residuals, a giant Union upper bound on `F`) -- basis-09 territory.
# - not-callable, bad-argument-count: `Transform._map_to_map` constructs via a `cls` resolved
#   from `MyType.main` at runtime, which pyrefly can't rule out being `type[None]` statically.
bad-argument-type = 'warn'
no-matching-overload = 'warn'
bad-assignment = 'warn'
missing-attribute = 'warn'
bad-return = 'warn'
invalid-argument = 'warn'
not-iterable = 'warn'
invalid-yield = 'warn'
bad-specialization = 'warn'
not-callable = 'warn'
bad-argument-count = 'warn'
# `unnecessary-comparison` false-positives on `tests/utils/test_MetricUtils.py:32`: pyrefly
# narrows `cls.WARNINGS_SETUP` to `Literal[False]` from an assignment two lines up and doesn't
# invalidate that narrowing across the intervening `cls.setup_warnings()` call, even though
# that call is what sets it back to `True`. Real behavior is correct; the checker's narrowing
# isn't call-aware here.
unnecessary-comparison = 'warn'

# `internal-error`/`unsupported-operation` on `my/typing/MyType.py:560` (`head | (other.root or
# Empty)`): pyrefly crashes internally trying to resolve `__or__`/`__ror__` on the `Empty`
# sentinel type -- reported upstream-worthy, not something our config or source can route
# around. Scoped to this one file so the rules stay live everywhere else.
[[tool.pyrefly.sub-config]]
matches = "my/typing/MyType.py"

[tool.pyrefly.sub-config.errors]
internal-error = 'warn'
unsupported-operation = 'warn'

# `tests/caches/test_Cache.py` deliberately feeds wrong-typed keys/values into a strictly
# generic `Cache[int, str]` to assert that it raises at runtime -- the test's whole point is to
# violate the declared types, which is structurally incompatible with a static checker. Ignored
# (not just warned) since this file will *always* trip these two rules by design.
[[tool.pyrefly.sub-config]]
matches = "tests/caches/test_Cache.py"

[tool.pyrefly.sub-config.errors]
unsupported-operation = 'ignore'
bad-index = 'ignore'

# -------
# Linting
# -------
[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "A",     # builtins
  "ASYNC", # async
  "B",     # bugbear
  "C4",    # comprehensions
  "D",     # PyDocStyle
  "E",     # PyCodeStyle errors
  "F",     # PyFlakes
  "FA",    # annotations
  "FAST",  # FastAPI
  "ISC",   # implicit-str-concat
  "N",     # Naming
  "TC",    # type checking
  "NPY",   # numpy
  "PIE",   # misc.
  "PLE",   # PyLint errors
  "PTH",   # use pathlib
  "PERF",  # performance
  "PT",    # pytest
  "PD",    # pandas
  "RUF",   # ruff
  "SIM",   # simplification
  "UP",    # upgrade 2.7 idioms
]

ignore = [
  # Bugbear
  "B009",
  "B905",

  # Comprehensions
  "C408",
  "C413",

  # PyCodeStyle
  "E266",
  "E731", # allow lambdas

  # Naming
  "N999",

  # PyLint errors
  "PT013",
  "PT018",

  # Ruff
  "RUF022",

  # Simplify
  "SIM102", # combine nested ifs
  "SIM114", # combine if branches
  "SIM118",

  # PyDocStyle
  "D100", # docstrings for modules
  "D104", # docstrings for packages
  "D105", # docstrings for magic methods
  "D410", # blank line after docstring sections
  "D411", # blank line before docstring sections

  # Upgrade
  "UP007",

  # Type Checking
  "TC001",
  "TC002",
  "TC003",
]

[tool.ruff.lint.per-file-ignores]
'test_*.py' = ['D']
'*_test.py' = ['D']
# Deprecation shims re-export their target subpackage's `__all__` by reference
# (`[*_typing.__all__]`), which ruff can't statically prove is all-strings.
'my/text/__init__.py' = ['PLE0604']
'my/type/__init__.py' = ['PLE0604']

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.pydocstyle]
convention = "google"
